--- a/articulo-1.html
+++ b/articulo-1.html
@@ -24,6 +24,8 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contacto.html">Contacto</a>
+                <li class="nav-item">
+            <a class="nav-link" href="tarea8.html">Tarea</a>
             </li>
           </ul>
         </div>
