--- a/contacto.html
+++ b/contacto.html
@@ -25,6 +25,8 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
             </li>
+              <li class="nav-item">
+            <a class="nav-link" href="tarea8.html">Tarea</a>
           </ul>
         </div>
       </div>
